# afm-simulator

./: .gitignore  BRIEF.md  CHANGELOG.md  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
ev_motor_sim/: ev_motor_sim.spec  pyproject.toml
ev_motor_sim/scripts/: verify_clean_install.sh
ev_motor_sim/src/ev_motor_sim/: main.py
ev_motor_sim/src/ev_motor_sim/models/: __init__.py  afpm.py  params.py  pmsm.py
ev_motor_sim/src/ev_motor_sim/physics/: __init__.py  control.py  dq_frame.py  losses.py
ev_motor_sim/src/ev_motor_sim/presets/: __init__.py  generic_60kw.json  tesla_model3.json  yasa_750r.json
ev_motor_sim/src/ev_motor_sim/ui/: __init__.py  efficiency_map_widget.py  key_numbers_widget.py  loss_breakdown_widget.py  main_window.py  param_panel.py
ev_motor_sim/tests/: conftest.py  test_afpm_physics.py  test_binary_smoke.py  test_dq_frame.py  test_motor_params.py  test_pmsm_physics.py  test_reference_presets.py
